Aligned radio buttons correctly on mobile devices

--- a/src/main.scss
+++ b/src/main.scss
@@ -159,11 +159,16 @@ input[type='radio']:after {
   content: '';
   display: inline-block;
   height: 8px;
-  left: 0;
+  left: 2px;
   position: relative;
-  top: 0;
+  top: 2px;
   visibility: visible;
   width: 8px;
+
+  @media (min-width: $breakpoint-mobile-horizontal) {
+    left: 0;
+    top: 0;
+  }
 }
 
 input[type='radio']:checked:after {
@@ -173,11 +178,16 @@ input[type='radio']:checked:after {
   content: '';
   display: inline-block;
   height: 8px;
-  left: 0;
+  left: 2px;
   position: relative;
-  top: 0;
+  top: 2px;
   visibility: visible;
   width: 8px;
+
+  @media (min-width: $breakpoint-mobile-horizontal ) {
+    left: 0;
+    top: 0;
+  }
 }
 
 // HELPER CLASSES
